--- a/fe/src/components/UI/atoms/primaryInput/OPPrimaryInput.module.scss
+++ b/fe/src/components/UI/atoms/primaryInput/OPPrimaryInput.module.scss
@@ -4,14 +4,18 @@
   font-family: "Bulldog";
   float: left;
   clear: left;
-  width: "100%";
   padding-left: 6px;
 }
+
+.input-container {
+	position: relative;
+}
+
 .input-field {
   width: 97%;
   height: 36px;
-  margin-bottom: 2.5vh;
-  margin-top: 0.5vh;
+  margin-bottom: 24px;
+  margin-top: 8px;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
 
@@ -22,6 +26,9 @@
   padding-left: 10px;
   font-family: bulldog;
   font-size: 14px;
+  transition-property: background-color, border-color, color;
+  transition-duration: 0.25s;
+  transition-timing-function: ease-in-out;
   z-index: 0;
   &:focus {
     outline: 2px solid $lightOrange;
@@ -42,7 +49,7 @@
   float: left;
   clear: left;
   margin-top: -20px;
-  margin-bottom: 10px;
+  padding-left: 5px;
   color: $redError;
 }
 
@@ -57,8 +64,8 @@
 .input-error {
   width: 98%;
   height: 36px;
-  margin-bottom: 2.5vh;
-  margin-top: 0.5vh;
+  margin-bottom: 24px;
+  margin-top: 8px;
   border-radius: 7px;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
@@ -69,6 +76,9 @@
   font-family: bulldog;
   background-color: #ffcccb;
   font-size: 14px;
+  transition-property: background-color, border-color, color;
+  transition-duration: 0.25s;
+  transition-timing-function: ease-in-out;
   &:focus {
     outline: 1px solid #b30000;
   }
