Logi page - fonts & style update

--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -2,3 +2,8 @@
   font-family: "bulldog";
   src: local("bulldog"), url(./fonts/bulldog.ttf) format("opentype");
 }
+
+@font-face {
+  font-family: "Dosis";
+  src: local("Dosis"), url(./fonts/dosis.ttf) format("opentype");
+}
