--- a/fe/src/components/UI/atoms/primaryInput/OPPrimaryInput.module.scss
+++ b/fe/src/components/UI/atoms/primaryInput/OPPrimaryInput.module.scss
@@ -1,21 +1,23 @@
 @import "../../../../constants/Colors.scss";
 
 .input-label {
-  font-family: "Bulldog";
   float: left;
   clear: left;
   padding-left: 6px;
+  font-family: "Dosis";
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .input-container {
-	position: relative;
+  position: relative;
 }
 
 .input-field {
   width: 97%;
   height: 36px;
-  margin-bottom: 24px;
-  margin-top: 8px;
+  margin-bottom: 30px;
+  margin-top: 6px;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
 
@@ -24,8 +26,9 @@
   overflow: hidden;
   border: 1px solid rgba(0, 0, 0, 0.08);
   padding-left: 10px;
-  font-family: bulldog;
-  font-size: 14px;
+  font-family: "Dosis";
+  font-size: 16px;
+  font-weight: 600;
   transition-property: background-color, border-color, color;
   transition-duration: 0.25s;
   transition-timing-function: ease-in-out;
@@ -36,7 +39,8 @@
 }
 
 .input-field::placeholder {
-  font: 14px bulldog;
+  font-family: "Dosis";
+  font-weight: 400 !important;
   color: $bgLightGrey;
 }
 
@@ -45,11 +49,13 @@
 }
 
 .error {
-  font: 12px bulldog;
   float: left;
   clear: left;
-  margin-top: -20px;
+  margin-top: -26px;
   padding-left: 5px;
+  font-family: "Dosis";
+  font-size: 13px;
+  font-weight: 600;
   color: $redError;
 }
 
@@ -64,8 +70,8 @@
 .input-error {
   width: 98%;
   height: 36px;
-  margin-bottom: 24px;
-  margin-top: 8px;
+  margin-bottom: 30px;
+  margin-top: 6px;
   border-radius: 7px;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
@@ -73,7 +79,9 @@
   -khtml-border-radius: 7px;
   padding-left: 10px;
   border: 1px solid rgba(0, 0, 0, 0.08);
-  font-family: bulldog;
+  font-family: "Dosis";
+  font-size: 16px;
+  font-weight: 600;
   background-color: #ffcccb;
   font-size: 14px;
   transition-property: background-color, border-color, color;
@@ -83,3 +91,8 @@
     outline: 1px solid #b30000;
   }
 }
+
+.input-error::placeholder {
+	font-family: "Dosis";
+	font-weight: 400 !important;
+  }
