--- a/fe/src/constants/Colors.scss
+++ b/fe/src/constants/Colors.scss
@@ -1,7 +1,10 @@
 $white: #fff;
+$black: #000;
 $red: #ef6852;
 $orange: #ef8d56;
 $lightOrange: #ffd9a6;
 $redError: #ff003d;
+$grey: #5a5a5a;
 $bgLightGrey: #d7d7d7;
 $background: #f5f5f5;
+$lighetGrey: #848484;
