--- a/fe/src/constants/Colors.scss
+++ b/fe/src/constants/Colors.scss
@@ -6,5 +6,5 @@ $lightOrange: #ffd9a6;
 $redError: #ff003d;
 $grey: #5a5a5a;
 $bgLightGrey: #d7d7d7;
-$background: #f5f5f5;
+$background: #fafafa;
 $lighetGrey: #848484;
