--- a/fe/src/components/UI/molecules/header/OPHeader.module.scss
+++ b/fe/src/components/UI/molecules/header/OPHeader.module.scss
@@ -21,9 +21,9 @@
   padding: 0 22px;
   background-color: $white;
   border-radius: 4px 4px 0px 0px;
-  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.05);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
 }
 
 .header-logo-wrapper {
-	margin-right: 6px;
+  margin-right: 6px;
 }
