feat: style filter

--- a/fe/src/components/UI/atoms/primaryButton/OPPrimaryButton.module.scss
+++ b/fe/src/components/UI/atoms/primaryButton/OPPrimaryButton.module.scss
@@ -5,8 +5,8 @@
   height: 40px;
   padding-top: 8px;
   padding-bottom: 10px;
-  background-color: $orange;
-  border: 2px solid $orange;
+  background-color: $red;
+  border: 2px solid $red;
   border-radius: 7px;
   font-family: "Bulldog";
   font-size: 14px;
