feat: connect action types with BE

--- a/fe/src/components/UI/atoms/filterItem/OPFilterItem.module.scss
+++ b/fe/src/components/UI/atoms/filterItem/OPFilterItem.module.scss
@@ -15,6 +15,7 @@
   align-self: flex-start;
   padding-left: 10px;
   padding-right: 10px;
+  font-family: "Dosis";
 
   border: 1px solid transparent;
 
