--- a/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
+++ b/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
@@ -3,7 +3,7 @@
 .volunteer-actions-page {
   background-color: $background;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding-top: 89px;
 }
 
@@ -24,4 +24,22 @@
 .filter-wrapper {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
+
+  margin: 10px 16px 0 16px;
+}
+
+.filter-items {
+  display: flex;
+  overflow-x: scroll;
+  width: 55%;
+  padding-bottom: 7px;
+}
+
+.search-button-wrapper {
+  position: absolute;
+  width: 100px;
+  right: 20px;
 }
