--- a/fe/src/components/UI/atoms/primaryButton/OPPrimaryButton.module.scss
+++ b/fe/src/components/UI/atoms/primaryButton/OPPrimaryButton.module.scss
@@ -8,7 +8,7 @@
   background-color: $red;
   border: 2px solid $red;
   border-radius: 7px;
-  font-family: "Bulldog";
+  font-family: "Dosis";
   font-size: 14px;
   font-weight: 600;
   color: $white;
@@ -19,5 +19,4 @@
     cursor: pointer;
     opacity: 0.8;
   }
-
 }
