--- a/fe/src/components/UI/atoms/searchBar/OPSearchBar.module.scss
+++ b/fe/src/components/UI/atoms/searchBar/OPSearchBar.module.scss
@@ -2,7 +2,6 @@
 
 .search-bar-wrapper {
   width: 30%;
-  margin: 0 auto;
   padding: 5px 15px;
 
   background: $white;
@@ -20,7 +19,7 @@
 .search-bar {
   box-sizing: border-box;
 
-  height: 39px;
+  height: 34px;
   width: 100%;
   padding-left: 11px;
 
@@ -28,6 +27,7 @@
   border-radius: 10px;
 
   font-size: 16px;
+  font-family: "Dosis";
   line-height: 22px;
 
   color: $black;
