--- a/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
+++ b/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
@@ -26,6 +26,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  position: relative;
   gap: 20px;
 
   margin: 10px 16px 0 16px;
