--- a/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
+++ b/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
@@ -1,24 +1,7 @@
 @import "../../../constants/Colors.scss";
 
-.volunteer-actions-page {
-  background-color: $background;
-  width: 100%;
-  height: 100vh;
-  padding-top: 89px;
-}
-
 .content-wrapper {
   width: 100%;
-}
-
-.header-wrapper {
-  width: 100%;
-  height: 10vh;
-  background-color: $background;
-  border-bottom: 1px solid $white;
-  position: sticky;
-  top: 0px;
-  z-index: 1000;
 }
 
 .filter-wrapper {
@@ -26,21 +9,18 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  position: relative;
-  gap: 20px;
+  width: 100%;
+  padding: 16px;
+  background: rgba(53, 96, 255, 0.02);
+  border-radius: 4px 4px 0px 0px;
 
-  margin: 10px 16px 0 16px;
-}
-
-.filter-items {
-  display: flex;
-  overflow-x: scroll;
-  width: 55%;
-  padding-bottom: 7px;
+  & > div:not(:last-of-type) {
+    margin-right: 20px;
+  }
 }
 
 .search-button-wrapper {
-  position: absolute;
+  align-self: flex-start;
   width: 100px;
-  right: 20px;
+  margin-left: auto;
 }
