--- a/fe/src/components/UI/atoms/searchBar/OPSearchBar.module.scss
+++ b/fe/src/components/UI/atoms/searchBar/OPSearchBar.module.scss
@@ -1,7 +1,8 @@
 @import "../../../../constants/Colors.scss";
 
 .search-bar-wrapper {
-  width: 30%;
+  width: 100%;
+  max-width: 260px;
   padding: 5px 15px;
 
   background: $white;
@@ -10,6 +11,11 @@
 
   display: flex;
   align-items: center;
+  align-self: flex-start;
+
+  svg {
+    min-width: 30px;
+  }
 }
 
 .search-bar-wrapper:focus-within {
@@ -21,13 +27,13 @@
 
   height: 34px;
   width: 100%;
-  padding-left: 11px;
 
   border: 1px solid transparent;
   border-radius: 10px;
 
   font-size: 16px;
   font-family: "Dosis";
+  font-weight: 600;
   line-height: 22px;
 
   color: $black;
@@ -35,6 +41,7 @@
 
 .search-bar::placeholder {
   color: $grey;
+  font-weight: 600;
 }
 
 .search-bar:focus {
