--- a/fe/src/constants/GlobalStyle.module.scss
+++ b/fe/src/constants/GlobalStyle.module.scss
@@ -5,12 +5,20 @@
   width: 100%;
   height: 100%;
   display: flex;
-  }
+}
 
 .content-wrapper {
   width: 100%;
-  max-width: 1440px;
-  min-height: 100vh;
-  padding: 88px 16px 20px;
+  padding: 88px 16px 0;
+  margin: 0 auto 20px;
+}
+
+.content {
+  max-width: 1444px;
+  min-height: calc(100vh - 108px);
   margin: 0 auto;
+  background-color: $white;
+  border-left: 1px solid rgba(0, 0, 0, 0.05);
+  border-right: 1px solid rgba(0, 0, 0, 0.05);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
