Header Item & Filter Item - style fix

--- a/fe/src/components/UI/atoms/filterItem/OPFilterItem.module.scss
+++ b/fe/src/components/UI/atoms/filterItem/OPFilterItem.module.scss
@@ -5,9 +5,7 @@
   color: $white;
   text-transform: uppercase;
   white-space: nowrap;
-
   border-radius: 100px;
-
   display: flex;
   width: min-content;
   justify-content: center;
@@ -16,8 +14,9 @@
   padding-left: 10px;
   padding-right: 10px;
   font-family: "Dosis";
-
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 600;
   border: 1px solid transparent;
-
   cursor: pointer;
 }
