--- a/fe/src/constants/GlobalStyle.module.scss
+++ b/fe/src/constants/GlobalStyle.module.scss
@@ -17,7 +17,9 @@
   max-width: 1444px;
   min-height: calc(100vh - 108px);
   margin: 0 auto;
+  padding: 16px;
   background-color: $white;
+  border-radius: 0 0 6px 6px;
   border-left: 1px solid rgba(0, 0, 0, 0.05);
   border-right: 1px solid rgba(0, 0, 0, 0.05);
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
