--- a/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
+++ b/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
@@ -9,10 +9,21 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  position: relative;
   width: calc(100% + 32px);
   padding: 16px;
   margin: -16px -16px 0;
-  background: rgba(53, 96, 255, 0.02);
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 30px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.04) 0%, rgba(0, 0, 0, 0) 100%);
+  }
 
   & > div:not(:last-of-type) {
     margin-right: 20px;
