--- a/fe/src/constants/GlobalStyle.module.scss
+++ b/fe/src/constants/GlobalStyle.module.scss
@@ -19,7 +19,7 @@
   min-height: calc(100vh - 108px);
   margin: 0 auto;
   padding: 16px;
-  background-color: $white;
+  background-color: rgba(53, 96, 255, 0.02);
   border-radius: 0 0 6px 6px;
   border-left: 1px solid rgba(0, 0, 0, 0.05);
   border-right: 1px solid rgba(0, 0, 0, 0.05);
@@ -27,10 +27,22 @@
 }
 
 .add-wrapper {
-  margin: -16px -16px 0;
+  position: relative;
+  margin: -16px -16px 30px;
   padding: 16px 16px 20px;
   width: calc(100% + 32px);
-  background: rgba(53, 96, 255, 0.02);;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 30px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.04) 0%, rgba(0, 0, 0, 0) 100%);
+  }
+
 }
 
 .add-text {
