--- a/fe/src/constants/Colors.scss
+++ b/fe/src/constants/Colors.scss
@@ -8,5 +8,6 @@ $grey: #5a5a5a;
 $bgLightGrey: #d7d7d7;
 $background: #fafafa;
 $lighetGrey: #848484;
-$green: #98D3A9;
+$green: #98d3A9;
 $greenHover: #7baf8a;
+$brown: #6d5953;
