--- a/fe/src/components/UI/molecules/header/OPHeader.module.scss
+++ b/fe/src/components/UI/molecules/header/OPHeader.module.scss
@@ -28,3 +28,28 @@
 .header-logo-wrapper {
   margin-right: 6px;
 }
+
+.header-logout-wrapper {
+  margin-left: auto;
+
+  button {
+  width: 100%;
+  height: 40px;
+  padding: 8px 10px 10px;
+  background-color: $white;
+  border: 2px solid #848484;
+  border-radius: 7px;
+  font-family: "Dosis";
+  font-size: 14px;
+  font-weight: 600;
+  color: #848484;
+  transition-property: color, background-color;
+  transition-duration: 0.25s;
+  transition-timing-function: ease-in-out;
+  &:hover {
+    cursor: pointer;
+  background-color: #848484;
+  color: $white;
+  }
+}
+}
