--- a/fe/src/constants/GlobalStyle.module.scss
+++ b/fe/src/constants/GlobalStyle.module.scss
@@ -28,7 +28,7 @@
 
 .add-wrapper {
   position: relative;
-  margin: -16px -16px 30px;
+  margin: -16px -16px 40px;
   padding: 16px 16px 20px;
   width: calc(100% + 32px);
 
@@ -54,7 +54,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding: 10px 25px;
+  padding: 10px 25px 10px 18px;
   font-size: 18px;
   line-height: 19px;
   font-weight: 600;
@@ -64,6 +64,12 @@
   border: 0;
   border-radius: $borderRadius;
   transition: background-color 0.25s ease-in-out;
+
+  span {
+    font-size: 22px;
+    margin-top: -4px;
+    margin-right: 5px;
+  }
 
   &:hover {
     background-color: $greenHover;
