--- a/fe/src/constants/GlobalStyle.module.scss
+++ b/fe/src/constants/GlobalStyle.module.scss
@@ -75,3 +75,20 @@
     background-color: $greenHover;
   }
 }
+
+.modal-footer-ctas {
+  display: flex;
+  padding-top: 16px;
+
+  & > button:not(:last-of-type) {
+    margin-right: 10px;
+  }
+}
+
+.modal-content-paragraph {
+	margin-bottom: 20px;
+    font-family: "Dosis";
+    font-size: 18px;
+	line-height: 20px;
+    font-weight: 600;
+}
