--- a/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
+++ b/fe/src/components/pages/actions/VolunteerActionsPage.module.scss
@@ -15,14 +15,18 @@
   margin: -16px -16px 0;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: -30px;
     left: 0;
     right: 0;
     width: 100%;
     height: 30px;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.04) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.04) 0%,
+      rgba(0, 0, 0, 0) 100%
+    );
   }
 
   & > div:not(:last-of-type) {
@@ -34,4 +38,13 @@
   align-self: flex-start;
   width: 100px;
   margin-left: auto;
+}
+
+.search-and-add-button-wrapper {
+  align-self: flex-start;
+  width: 220px;
+  display: flex;
+  margin-left: auto;
+  flex-direction: row;
+  justify-content: space-between;
 }
