Prevod na srpski - fix

--- a/fe/src/components/UI/molecules/cardItem/OPCardItem.module.scss
+++ b/fe/src/components/UI/molecules/cardItem/OPCardItem.module.scss
@@ -3,6 +3,7 @@
 .card-item-wrapper {
   position: relative;
   max-width: 375px;
+  width: 100%;
   min-height: 422px;
   margin-bottom: 20px;
   padding-top: 203px;
