--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -2,3 +2,7 @@
   font-family: "Dosis";
   src: local("Dosis"), url(./fonts/dosis.ttf) format("opentype");
 }
+
+html {
+  font-family: "Dosis", sans-serif !important;
+}
